Add _Layout and _ViewStart for View Page

--- a/src/DotNetCore/Views/Home/About.cshtml
+++ b/src/DotNetCore/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = "Index Page";
+    ViewBag.Title = "About Page";
 }
-<H1>This is Index.</H1>
+<H1>This is About.</H1>
