Use boostrap and jquery and add nav-bar

--- a/src/DotNetCore/Views/Home/About.cshtml
+++ b/src/DotNetCore/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 @{
     ViewBag.Title = "About Page";
 }
-<H1>This is About.</H1>
+<H1>Welcome to the Robert ASP.NET Core WebSite.</H1>
+
+<div class="row">
+    <div class="col-md-12">
+        <a asp-controller="Account" asp-action="Index" class="btn btn-primary">Show Accounts</a>
+    </div>
+</div>
