--- a/src/DotNetCore/Views/Home/Index.cshtml
+++ b/src/DotNetCore/Views/Home/Index.cshtml
@@ -2,6 +2,12 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = "Index Page";
+    ViewBag.Title = "Home Page";
 }
-<H1>This is Index.</H1>
+<H1>Welcome to the Robert ASP.NET Core WebSite.</H1>
+
+<div class="row">
+    <div class="col-md-12">
+        <a asp-controller="Account" asp-action="Index" class="btn btn-primary">Show Accounts</a>
+    </div>
+</div>
