--- a/src/DotNetCore/Views/Account/Create.cshtml
+++ b/src/DotNetCore/Views/Account/Create.cshtml
@@ -5,31 +5,51 @@
 @{
     ViewBag.Title = "Create Account";
 }
+<a asp-action="Index" class="btn btn-default pull-right">Back to Account Index</a>
+
 
 <form asp-action="Create">
-    <div asp-validation-summary="All"></div>
+    <div class="form-horizontal">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="username" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="text" asp-for="username" />
+                <span asp-validation-for="username" class="text-danger"></span>
+            </div>
+        </div>
 
-    <label asp-for="username"></label>
-    <input type="text" asp-for="username" />
-    <span asp-validation-for="username"></span>
-    <br />
+        <div class="form-group">
+            <label asp-for="password" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="text" asp-for="password" />
+                <span asp-validation-for="password" class="text-danger"></span>
+            </div>
+        </div>
 
-    <label asp-for="password"></label>
-    <input type="password" asp-for="password" />
-    <span asp-validation-for="password"></span>
-    <br />
+        <div class="form-group">
+            <label asp-for="email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="text" asp-for="email" />
+                <span asp-validation-for="email" class="text-danger"></span>
+            </div>
+        </div>
 
-    <label asp-for="email"></label>
-    <input type="text" asp-for="email" />
-    <span asp-validation-for="email"></span>
-    <br />
-
-    <label asp-for="phone"></label>
-    <input type="text" asp-for="phone" />
-    <span asp-validation-for="phone"></span>
-    <br />
-
-    <input type="submit" value="Create" />
+        <div class="form-group">
+            <label asp-for="phone" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="text" asp-for="phone" />
+                <span asp-validation-for="phone" class="text-danger"></span>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10" >
+                <input type="submit" value="Create" class="btn btn-default"/>
+            </div>
+        </div>
+    </div>
+    
 </form>
 
 
